APDS-82 fixes for inactivation modal and report fixes for search close button appearing white global removal of removal of inline <style> blocks from all html files, checked for syntax errors, code formatted for readability fix for edit panel button hovers, fixed issue of zindex not properly set so taxonomy in reports overlaps (currently in production) syntax error in user preferences form (double declaration of <form> html property Corrected feedback list syntax error from missing <h4> tag syntax error in search double declaration of ui-on-drop=""

--- a/app/styles/classification.scss
+++ b/app/styles/classification.scss
@@ -35,9 +35,7 @@
     padding-top: 6px;
     width: 100%;
     display: block;}
-.classification-header {
-   
-}
+
 .classification-header p {
 	margin: 0px;
 }
